Modify code resort and swagger
