# src/controllers/follow/putFollow.js
@@ -3,29 +3,30 @@ import { Users, Follow } from '../../models';
 export default async (decodeData, bodyData) => {
   const userFindData = {};
 
+  userFindData.removed = 0;
+  userFindData.id = bodyData.user_id;
   userFindData.email = bodyData.email;
   userFindData.name = bodyData.name;
-  userFindData.removed = 0;
 
-  const findData = await Users.findOne({
-    attributes: ['id'],
-    where: userFindData,
-  });
+  const findData = await Users.findOne({ where: userFindData });
 
-  if (findData) {
-    const whereData = {};
-    const updateData = {};
+  if (!findData) return 'not found';
 
-    whereData.target_id = decodeData.id;
-    whereData.follow_id = findData.dataValues.id;
-    whereData.removed = 0;
+  const whereData = {};
+  const updateData = {};
 
-    updateData.acceptanced = 1;
-    updateData.acceptanced_at = new Date();
+  whereData.removed = 0;
+  whereData.target_id = decodeData.id;
+  whereData.follow_id = bodyData.user_id;
+  whereData.id = bodyData.id;
+  whereData.acceptanced = 0;
 
-    const result = await Follow.update(updateData, { where: whereData });
+  updateData.acceptanced = 1;
+  updateData.acceptanced_at = new Date();
 
-    return result > 0 ? Follow.findOne({ where: whereData }) : 'not found';
-  }
-  return 'not found';
+  const result = await Follow.update(updateData, { where: whereData });
+
+  whereData.acceptanced = 1;
+
+  return result > 0 ? Follow.findOne({ where: whereData }) : 'not found';
 };
